--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Generated on: Wed May 18 2022 01:22:47 GMT+0000 (Coordinated Universal Time) */
+/* Generated on: Wed May 18 2022 02:57:55 GMT+0000 (Coordinated Universal Time) */
 /* ==========================================================================
    normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css 
    ========================================================================== */
@@ -226,8 +226,7 @@
    .section {
      position: relative;
      display: block;
-     padding-right: 2.5%;
-     padding-left: 2.5%;
+     padding: 10% 2.5% 0%;
      float: none;
      grid-auto-columns: 1fr;
      grid-column-gap: 16px;
@@ -269,7 +268,7 @@
    
    .header-section {
      padding-top: 76px;
-     padding-bottom: 76px;
+     padding-bottom: 0px;
      text-align: center;
    }
    
@@ -551,6 +550,7 @@
      padding-top: 41px;
      padding-bottom: 41px;
      border-top: 1px solid rgba(0, 0, 0, 0.13);
+     border-radius: 0px;
      text-align: center;
    }
    
@@ -737,7 +737,7 @@
    }
    
    .byline-wrapper {
-     margin-bottom: 25px;
+     margin-bottom: 5px;
      color: #ccc;
      font-size: 12px;
      line-height: 18px;
@@ -797,7 +797,7 @@
    }
    
    .blog-post {
-     margin-bottom: 100px;
+     margin-bottom: 0px;
    }
    
    .about-content {
@@ -1007,8 +1007,9 @@
    
    .slider {
      display: block;
+     overflow: auto;
      width: 100%;
-     height: 500px;
+     height: 50vh;
      outline-color: rgba(0, 0, 0, 0.74);
      outline-offset: 0px;
      outline-style: none;
@@ -1063,6 +1064,17 @@
    
    .icon-2 {
      font-size: 30px;
+   }
+   
+   .image {
+     -webkit-filter: blur(5px);
+     filter: blur(5px);
+   }
+   
+   .container-2 {
+     border-style: solid none none;
+     border-width: 1px;
+     border-color: #dadada #686868 #686868;
    }
    
    @media screen and (max-width: 991px) {
@@ -1139,9 +1151,17 @@
        font-size: 25px;
        line-height: 29px;
      }
+   
+     .slider {
+       height: 40vh;
+     }
    }
    
    @media screen and (max-width: 479px) {
+     .section {
+       padding-bottom: 10%;
+     }
+   
      .blog-content {
        width: 90%;
      }
@@ -1160,5 +1180,17 @@
    
      .post-heading {
        font-size: 24px;
+     }
+   
+     .slider {
+       height: 30vh;
+     }
+   
+     .icon {
+       font-size: 15px;
+     }
+   
+     .icon-2 {
+       font-size: 15px;
      }
    }
