--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Generated on: Wed May 18 2022 02:57:55 GMT+0000 (Coordinated Universal Time) */
+/* Generated on: Wed May 18 2022 03:27:11 GMT+0000 (Coordinated Universal Time) */
 /* ==========================================================================
    normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css 
    ========================================================================== */
@@ -938,7 +938,8 @@
    }
    
    .profile-text {
-     text-align: center;
+     overflow: visible;
+     text-align: left;
    }
    
    .profile-text p {
